fix spacing one more time

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ picture img {
   padding: 2rem;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 0.6rem;
 }
 
@@ -86,7 +87,7 @@ h1 {
   display: flex;
   align-items: center;
   gap: 1rem;
-  padding-bottom: 1.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .new {
